# springs-and-sticks

./: .gitignore  MANIFEST.in  README.md  index.html  limits.ipynb  mnist.py  pyproject.toml  requirements.txt  setup.py  speed.ipynb  springsticks.ipynb  ss_model.ipynb
paper_imgs/: entropies.py  entropies_run.py  entropy_figs.py  error_plots.py  mlp_compare.py
profiling/: profile_stats.prof
src/: __init__.py  entropy.py  ff_springs.py  model.py  profiling.py  speed_springs.py  springs_plot.py  springs_sdes.py  springs_sdes_torch.py  utils.py  view.py  viz.py
